--- a/.github/workflows/build-on-commit.yaml
+++ b/.github/workflows/build-on-commit.yaml
@@ -5,7 +5,7 @@ on:
     paths:
       - Dockerfile
       - Makefile
-      - '.gihtub/workflows/*'
+      - '.github/workflows/**'
 
 env:
   PLATFORMS: linux/arm/v7,linux/arm64,linux/amd64
