--- a/.github/workflows/build-on-commit.yaml
+++ b/.github/workflows/build-on-commit.yaml
@@ -38,6 +38,12 @@ jobs:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
+    -
+      name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
     - 
       name: Build image and push image to ghcr.io
       uses: docker/build-push-action@v5
@@ -47,7 +53,9 @@ jobs:
         sbom: false
         provenance: false
         platforms: ${{ env.PLATFORMS }}
-        tags: ghcr.io/${{ github.repository }}:latest
+        tags: 
+          - ghcr.io/${{ github.repository }}:latest
+          - ammo74/netinstall:latest
         build-args: |
           GHCR_REPO=${{ github.repository }}
           GHCR_TAG=${{ steps.meta.outputs.tags }}
