--- a/.github/workflows/build-on-commit.yaml
+++ b/.github/workflows/build-on-commit.yaml
@@ -45,6 +45,14 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - 
+      name: Add README to Docker Hub
+      uses: peter-evans/dockerhub-description@v4
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        repository: ammo74/netinstall
+        short-description: "Mikrotik /container for running netinstall to flash RouterOS devices on ARM/ARM64/X86"
+    - 
       name: Build image and push image to ghcr.io
       uses: docker/build-push-action@v5
       with:
