add manual trigger option for CI

--- a/.github/workflows/build-on-commit.yaml
+++ b/.github/workflows/build-on-commit.yaml
@@ -1,12 +1,12 @@
 name: build-on-commit
 
 on:
+  workflow_dispatch:
   push:
     paths:
       - Dockerfile
       - Makefile
       - '.github/workflows/**'
-
 env:
   PLATFORMS: linux/arm/v7,linux/arm64,linux/amd64
 
