--- a/.github/workflows/repo-as-web.yaml
+++ b/.github/workflows/repo-as-web.yaml
@@ -44,7 +44,14 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      - name: Add README to Docker Hub
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - 
+        name: Add README to Docker Hub
         uses: peter-evans/dockerhub-description@v4
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
